--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,11 @@ Authors@R: c(person("Robert", "Lee", email = "rhlee@colorado.edu", role = c("aut
              person("Cody", "Flagg", role = c("aut"))
              )
 Maintainer: Robert Lee <rhlee@colorado.edu>
-Description: A tool for downloading environmental data, worldwide. metDownloadR is designed to work with the metScanR package to retrieve data from sites discovered through metScanR.
+Description: A tool for downloading environmental data, worldwide. metget is designed to work with the metScanR package to retrieve data from sites discovered through metScanR.
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 License: GPL-3
-Depends: metScanR, RNRCS, rnoaa, jsonlite, httr, plyr
+Depends: R (>= 2.10)
+Imports: metScanR, RNRCS, rnoaa, jsonlite, httr, plyr, lubridate, stringr
 Suggests: Z10
